--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         <a href="#tag2">Morgen</a>
         <a href="#tag3">Übermorgen</a>
     </div>
+	<div>
+		<a href="https://meteo.hr/prognoze_e.php?section=prognoze_specp&param=jadran&el=jadran_n">Seewetterbericht</a>
+	</div>
     
     <h1 id="tag1"></h1>
     <h2 id="9uhr1">Heute 9:00</h2>
