--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <a href="#9uhr1">Heute</a>
         <a href="#9uhr2">Morgen</a>
         <a href="#9uhr3">Übermorgen</a>
+        Quelle: Croatian Meteorological and Hydrological Service https://prognoza.hr/ bzw. https://meteo.hr/
     </div>
     <div>
         <a href="https://meteo.hr/prognoze_e.php?section=prognoze_specp&param=jadran&el=jadran_n">Seewetterbericht</a>
@@ -123,5 +124,4 @@
 
 </html>
 
-</body>
-</html>
+
