--- a/morgen.html
+++ b/morgen.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Windvorhersage</h1>
     <div id="content">
-        <a href="#9uhr1">Heute</a>
-        <a href="#9uhr3">Übermorgen</a>
+        <a href="index.html">Heute</a>
+        <a href="uebermorgen.html">Übermorgen</a>
         Quelle: Croatian Meteorological and Hydrological Service https://prognoza.hr/ bzw. https://meteo.hr/
     </div>
     <div>
