--- a/uebermorgen.html
+++ b/uebermorgen.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Windvorhersage</h1>
     <div id="content">
-        <a href="#9uhr1">Heute</a>
-        <a href="#9uhr2">Morgen</a>
+        <a href="index.html">Heute</a>
+		<a href="morgen.html">Morgen</a>
         Quelle: Croatian Meteorological and Hydrological Service https://prognoza.hr/ bzw. https://meteo.hr/
     </div>
     <div>
