--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <a href="morgen.html">Morgen</a>
         <a href="uebermorgen.html">Übermorgen</a>
         <a href="https://meteo.hr/prognoze_e.php?section=prognoze_specp&param=jadran&el=jadran_n">Seewetterbericht</a>
+	<a href="https://prognoza.hr/7dslika2_print_tp_e.php?Code=14008">Wetterbericht</a>
+	    
     </div>
 	
 
